# sigma2

./: AGENTS.md  README.md  pyproject.toml
docs/: HANDOFF.md
docs/design/: factor-research-20260707-overview.md  operator-family-layering-20260708-overview.md  sigma2-20260704-overview.md  sigma2-20260704-roadmap.md  sigma2-20260704-signal-core.md  sigma2-20260704-system-design.md
docs/dev/: INDEX.md  PLAN-001-sigma2-roadmap-OUTCOME.md  PLAN-001-sigma2-roadmap.md  PLAN-002-signal-core-revision-OUTCOME.md  PLAN-002-signal-core-revision.md  PLAN-003-system-design-OUTCOME.md  PLAN-003-system-design.md  PLAN-004-family-registry-design-OUTCOME.md  PLAN-004-family-registry-design.md  PLAN-005-stable-core-api-OUTCOME.md  PLAN-005-stable-core-api.md  PLAN-006-design-doc-cleanup-OUTCOME.md  PLAN-006-design-doc-cleanup.md  PLAN-007-step-core-api-OUTCOME.md  PLAN-007-step-core-api.md  PLAN-008-pyta2-buffer-utils-OUTCOME.md  PLAN-008-pyta2-buffer-utils.md  PLAN-009-core-implementation-OUTCOME.md  PLAN-009-core-implementation.md  PLAN-010-core-only-package-structure-OUTCOME.md  PLAN-010-core-only-package-structure.md  PLAN-011-kline-effect-wrappers-OUTCOME.md  PLAN-011-kline-effect-wrappers.md  PLAN-012-pyta2-effect-parity-adapter-OUTCOME.md  PLAN-012-pyta2-effect-parity-adapter.md  PLAN-013-kline-effect-contract-guard-OUTCOME.md  PLAN-013-kline-effect-contract-guard.md  (+8 more)
sigma2/: __init__.py  _pyta2.py
sigma2/core/: kline.py  (+5 more)
tests/: test_core_signal.py  test_kline_effect_signals.py  test_kline_signals.py  test_market_families.py  test_package_structure.py  test_pyta2_adapter.py
(+33 files in other folders)
