[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "sigma2"
version = "0.1.0"
description = "Rolling signal core for quantitative feature engineering."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24",
]

[project.optional-dependencies]
test = [
    "pytest>=7.0",
]

[tool.setuptools.packages.find]
include = ["sigma2*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = [".", "pyta2"]
